--- a/buttonstatus/index.html
+++ b/buttonstatus/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="meindiv" class="beispiel">
-        <p>Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten.</p>
+        <p>Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten - gell!? </p>
     </div>
     
     <script src="buttonstatus.js"></script>
