--- a/buttonstatus/index.html
+++ b/buttonstatus/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <div id="meindiv" class="beispiel">
-        <p>Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten - gell!? </p>
+    <div id="mydiv">
+        <p id="mytext">Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten - gell!? </p>
     </div>
     
     <script src="buttonstatus.js"></script>
