--- a/buttonstatus/index.html
+++ b/buttonstatus/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Status</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -15,7 +15,7 @@
         <p id="mytext">Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten - gell!? </p>
     </div>
     
-    <script src="buttonstatus.js"></script>
+    <script src="buttonstatus.js" type="text/javascript"></script>
 
 </body>
 </html>
