--- a/buttonstatus/index.html
+++ b/buttonstatus/index.html
@@ -14,6 +14,8 @@
     <div id="mydiv">
         <p id="mytext">Dies ist ein sehr interessanter Hinweis in einem hübsch dekorierten Kasten - gell!? </p>
     </div>
+
+    <button id="button">Teste mich</button>
     
     <script src="buttonstatus.js" type="text/javascript"></script>
 
