--- a/local-storage/index.html
+++ b/local-storage/index.html
@@ -7,9 +7,9 @@
     <title>local storage test</title>
 </head>
 <body>
-    <div> id="local-wrapper" 
+    <div id="local-wrapper" >  
         <button type="button">Set Local Storage</button> 
-        <div> id="local-ausgabe" 
+        <div id="local-ausgabe">  
             <p>Ausgabe</p>
         </div>
     </div>
