--- a/local-storage/index.html
+++ b/local-storage/index.html
@@ -10,7 +10,7 @@
     <div id="local-wrapper" >  
         <button type="button">Set Local Storage</button> 
         <div id="local-ausgabe">  
-            <p>Ausgabe</p>
+            <p>Local Ausgabe:</p>
         </div>
     </div>
 </body>
